--- a/tests/runner/test_config/jax/test_config_inference_data_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_data_parallel.yaml
@@ -10,11 +10,14 @@ test_config:
 
   falcon/jax-3_3B_Base-single_device-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 37748736 B DRAM buffer across 12 banks, where each bank needs to store 3145728 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
 
   gpt2/causal_lm/jax-Base-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
     status: EXPECTED_PASSING
+    markers: [nightly]
 
   gpt2/causal_lm/jax-Large-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -43,19 +46,27 @@ test_config:
 
   phi2/causal_lm/jax-Phi_2-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 16777216 B DRAM buffer across 12 banks, where each bank needs to store 1400832 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
 
   phi2/causal_lm/jax-Phi_2_Pytdml-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 16777216 B DRAM buffer across 12 banks, where each bank needs to store 1400832 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
 
   phi3/causal_lm/jax-Phi_3_Mini_128K_Instruct-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
 
   phi3/causal_lm/jax-Phi_3_Mini_4K_Instruct-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "OOM DRAM"
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-0.5B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -67,7 +78,9 @@ test_config:
 
   qwen_2_5/causal_lm/jax-1.5B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 34359738368 B DRAM buffer across 12 banks, where each bank needs to store 2863312896 B, but bank size is 1073741792 B "
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-1.5B_Instruct-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -75,19 +88,27 @@ test_config:
 
   qwen_2_5/causal_lm/jax-3B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Out of Memory: Not enough space to allocate 2147483648 B DRAM buffer across 12 banks, where each bank needs to store 178958336 B, but bank size is 1073741792 B "
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-3B_Instruct-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 2147483648 B DRAM buffer across 12 banks, where each bank needs to store 178958336 B, but bank size is 1073741792 B "
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-7B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 271581184 B DRAM buffer across 12 banks, where each bank needs to store 22636544 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5/causal_lm/jax-7B_Instruct-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 271581184 B DRAM buffer across 12 banks, where each bank needs to store 22636544 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-0.5B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -103,19 +124,27 @@ test_config:
 
   qwen_2_5_coder/causal_lm/jax-3B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-3B_Instruct-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-7B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
 
   qwen_2_5_coder/causal_lm/jax-7B_Instruct-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
 
   qwen_3/causal_lm/jax-0_6B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
@@ -123,8 +152,12 @@ test_config:
 
   qwen_3/causal_lm/jax-1_7B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "DRAM OOM"
+    bringup_status: FAILED_RUNTIME
 
   qwen_3/causal_lm/jax-4B-data_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: EXPECTED_PASSING
+    status: NOT_SUPPORTED_SKIP
+    reason: "Not enough space to allocate 10485760 B DRAM buffer across 12 banks, where each bank needs to store 876544 B, but bank size is 1073741792 B"
+    bringup_status: FAILED_RUNTIME
